removing appear on scroll feature due to overflow issue on mobile screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,8 +19,13 @@
             border-radius: 50px;
         }
     }
+
 }
 
+[data-aos] {
+    position: relative;
+    overflow: hidden;
+}
 
 /* popover */
 
